test/tasty/neg/src-2/TestHKNest_fail.scala
package tastytest

import HKNest._

object TestHKNest {

  def test = assert(new HKClass_13[HKLam].foo[Int,String](("",0)) == "(,0)") // error: unsupported curried type application

}
